# Microservices_LB

./: .gitignore  PROJECT-README.md
customlb/: CMakeLists.txt  Dockerfile  LoadBalancer.cpp  LoadBalancer.h  README.md  cpp-loadbalancer-deployment.yaml  main_new.cpp
microservice-kubernetes-demo/: autoscale-demo.sh  benchmark.sh  microservices.yaml  tls.crt
microservice-kubernetes-demo/apache/: docs  frontend.yaml  microservice-ingress.yaml  nginx-lb.yaml  nginx.conf  task
microservice-kubernetes-demo/autoscaling/: hpa.yaml
microservice-kubernetes-demo/benchmark-results/: catalog_20251013_105631.txt  catalog_high_concurrency_20251013_105631.txt  customer_20251013_105631.txt  order_20251013_105631.txt  summary_20251013_105631.txt  sustained_catalog_20251013_105631.txt  sustained_customer_20251013_105631.txt  sustained_order_20251013_105631.txt
microservice-kubernetes-demo/database/: mongodb-deployment.yaml  postgres-deployment.yaml
microservice-kubernetes-demo/ingress/: microservices-direct-ingress.yaml  tls-ingress.yaml
microservice-kubernetes-demo/microservice-kubernetes-demo-catalog/: pom.xml
microservice-kubernetes-demo/microservice-kubernetes-demo-customer/: pom.xml
microservice-kubernetes-demo/microservice-kubernetes-demo-order/: pom.xml
microservice-kubernetes-demo/monitoring/: grafana-business-metrics-dashboard.json  grafana-microservices-dashboard.json  grafana-microservices-metrics-dashboard.json  grafana-nginx-dashboard.json  grafana-pod-metrics-dashboard.json  nginx-exporter.yaml  prometheus-grafana.yaml  servicemonitor.yaml
(+27 files in other folders)
